tests/success/return_chained_if_consteval.bz
function main() -> i32
{
	return if consteval (true) {
		0
	} else if consteval (false) {
		unreachable
	} else {
		unreachable
	};
}
