tests/error/comptime/check_inplace_construct2.bz
function test()
{
	(consteval {
		let i = 0;
		__builtin_inplace_construct(&i, 0);
	});
}
